@@ -1,3 +1,4 @@
+9/28/10 merge plate charge representation into PlateNode
 # 0.00.15 (44492) Sep 28, 2010
 9/28/10 dev version to demonstrate problems with plate charge representation
 9/28/10 keep charges fully inside the plate by taking the charge size into account
